--- a/TestCalendar/Test Calendar/HeaderCollectionViewCell.xib
+++ b/TestCalendar/Test Calendar/HeaderCollectionViewCell.xib
@@ -15,7 +15,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="GKE-Sa-TBA" customClass="HeaderCollectionViewCell" customModule="Test_Calendar" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="customCell" id="GKE-Sa-TBA" customClass="HeaderCollectionViewCell" customModule="Test_Calendar" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
