--- a/TestCalendar/Test Calendar/HeaderCollectionViewCell.xib
+++ b/TestCalendar/Test Calendar/HeaderCollectionViewCell.xib
@@ -9,11 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HeaderCollectionViewCell" customModule="Test_Calendar" customModuleProvider="target">
-            <connections>
-                <outlet property="dayLabel" destination="rie-1H-7RX" id="NnQ-5q-J1t"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HeaderCollectionViewCell" customModule="Test_Calendar" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="customCell" id="GKE-Sa-TBA" customClass="HeaderCollectionViewCell" customModule="Test_Calendar" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -34,6 +30,9 @@
                 <constraint firstItem="rie-1H-7RX" firstAttribute="centerY" secondItem="GKE-Sa-TBA" secondAttribute="centerY" id="e2s-Iw-et6"/>
                 <constraint firstItem="rie-1H-7RX" firstAttribute="centerX" secondItem="GKE-Sa-TBA" secondAttribute="centerX" id="mOG-Ob-x8g"/>
             </constraints>
+            <connections>
+                <outlet property="dayLabel" destination="rie-1H-7RX" id="Sbe-ff-ebG"/>
+            </connections>
             <point key="canvasLocation" x="125" y="50"/>
         </collectionViewCell>
     </objects>
