一つのイベントのデータを取得　確認

--- a/TestCalendar/Test Calendar/ShowDetail.storyboard
+++ b/TestCalendar/Test Calendar/ShowDetail.storyboard
@@ -310,10 +310,10 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pE6-dR-4Tg">
-                                                <rect key="frame" x="215" y="17" width="100" height="23"/>
+                                                <rect key="frame" x="165" y="17" width="150" height="23"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="23" id="k3z-bn-FGK"/>
-                                                    <constraint firstAttribute="width" constant="100" id="ybd-XO-CiA"/>
+                                                    <constraint firstAttribute="width" constant="150" id="ybd-XO-CiA"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
@@ -418,6 +418,12 @@
                                     <constraint firstItem="ucv-8C-M7O" firstAttribute="height" secondItem="DJI-oJ-euw" secondAttribute="height" id="o7q-eB-jVg"/>
                                 </constraints>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ubi-3k-0Yn" customClass="ProcessButton" customModule="Test_Calendar" customModuleProvider="target">
+                                <rect key="frame" x="37.5" y="600.5" width="300" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="42" id="WV5-mm-V8P"/>
+                                </constraints>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -427,7 +433,9 @@
                             <constraint firstItem="Dvj-L1-8G7" firstAttribute="trailing" secondItem="jjC-Pr-bmi" secondAttribute="trailing" id="6s9-dw-bbU"/>
                             <constraint firstAttribute="trailing" secondItem="3Ga-CH-wUc" secondAttribute="trailing" id="9Dl-6S-w2E"/>
                             <constraint firstItem="jjC-Pr-bmi" firstAttribute="centerX" secondItem="cbV-Nh-ljf" secondAttribute="centerX" id="Ghu-1h-bha"/>
+                            <constraint firstItem="ubi-3k-0Yn" firstAttribute="top" secondItem="VTq-H9-AuN" secondAttribute="bottom" constant="20" id="N5i-IP-rg9"/>
                             <constraint firstItem="3Ga-CH-wUc" firstAttribute="centerX" secondItem="cbV-Nh-ljf" secondAttribute="centerX" id="OtX-Ze-yZy"/>
+                            <constraint firstItem="ubi-3k-0Yn" firstAttribute="centerX" secondItem="cbV-Nh-ljf" secondAttribute="centerX" id="OyE-ng-jO2"/>
                             <constraint firstItem="VTq-H9-AuN" firstAttribute="centerX" secondItem="cbV-Nh-ljf" secondAttribute="centerX" id="UYS-0f-zgq"/>
                             <constraint firstItem="Hts-7e-OVv" firstAttribute="leading" secondItem="jjC-Pr-bmi" secondAttribute="leading" id="Y9R-Am-VeG"/>
                             <constraint firstItem="3Ga-CH-wUc" firstAttribute="top" secondItem="fLI-Tt-sba" secondAttribute="bottom" id="bcn-JU-Wua"/>
@@ -437,6 +445,7 @@
                             <constraint firstItem="VTq-H9-AuN" firstAttribute="width" secondItem="cbV-Nh-ljf" secondAttribute="width" multiplier="0.92" id="gqc-HI-zcP"/>
                             <constraint firstItem="Dvj-L1-8G7" firstAttribute="bottom" secondItem="jjC-Pr-bmi" secondAttribute="bottom" id="ic3-7L-QRJ"/>
                             <constraint firstItem="Hts-7e-OVv" firstAttribute="bottom" secondItem="jjC-Pr-bmi" secondAttribute="bottom" id="r0Z-lv-8E2"/>
+                            <constraint firstItem="ubi-3k-0Yn" firstAttribute="width" secondItem="cbV-Nh-ljf" secondAttribute="width" multiplier="0.8" id="yAE-df-W2V"/>
                         </constraints>
                     </view>
                     <connections>
@@ -450,7 +459,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x8F-4Y-9Gf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="44" y="-403"/>
+            <point key="canvasLocation" x="44" y="-403.44827586206901"/>
         </scene>
     </scenes>
     <resources>
